bindings: CAlphaRenderer::selectionCenterOfMass()

--- a/src/toolkit/pylib.cpp.in
+++ b/src/toolkit/pylib.cpp.in
@@ -322,7 +322,7 @@ BOOST_PYTHON_MODULE(@current_pylib@)
 //        .def("selectionRotate", &CAlphaRenderer::SelectionRotate)
 //        .def("selectionObjectCount", &CAlphaRenderer::SelectionObjectCount)
         .def("selectionAtomCount", &CAlphaRenderer::selectionAtomCount)
-//        .def("selectionCenterOfMass", &CAlphaRenderer::SelectionCenterOfMass)
+        .def("selectionCenterOfMass", &CAlphaRenderer::selectionCenterOfMass)
 //        .def("selectionMove", &CAlphaRenderer::SelectionMove)
 //        .def("selectionClear", &CAlphaRenderer::SelectionClear)     
 //        .def("selectionToggle", &CAlphaRenderer::SelectionToggle)   
