--- a/src/toolkit/pylib.cpp.in
+++ b/src/toolkit/pylib.cpp.in
@@ -323,7 +323,7 @@ BOOST_PYTHON_MODULE(@current_pylib@)
 //        .def("selectionObjectCount", &CAlphaRenderer::SelectionObjectCount)
         .def("selectionAtomCount", &CAlphaRenderer::selectionAtomCount)
         .def("selectionCenterOfMass", &CAlphaRenderer::selectionCenterOfMass)
-//        .def("selectionMove", &CAlphaRenderer::SelectionMove)
+        .def("selectionMove", &CAlphaRenderer::selectionMove)
 //        .def("selectionClear", &CAlphaRenderer::SelectionClear)     
 //        .def("selectionToggle", &CAlphaRenderer::SelectionToggle)   
 //        .def("getAtomFromHitStack", &CAlphaRenderer::GetAtomFromHitStack, return_value_policy<reference_existing_object>())
